@@ -1112,6 +1112,11 @@ Supported options include: "none", "board", "socket", "ldom" (NUMA), "core",
 "thread" and "off" (remove previous binding mode).
 
 .TP
+\fIExtra\fP=<comment>
+Arbitrary string on the node. Use quotes to enclose a string having more than
+one word.
+
+.TP
 \fIGres\fP=<gres>
 Identify generic resources to be associated with the specified node.  Any
 previously defined generic resources will be overwritten with the new value.
