@@ -1,4 +1,4 @@
-.TH sinfo "1" "Slurm Commands" "May 2021" "Slurm Commands"
+.TH sinfo "1" "Slurm Commands" "June 2021" "Slurm Commands"
 
 .SH "NAME"
 sinfo \- View information about Slurm nodes and partitions.
@@ -362,6 +362,9 @@ Default time for any job in the format "days\-hours:minutes:seconds".
 .TP
 \fBDisk\fR
 Size of temporary disk space per node in megabytes.
+.TP
+\fBExtra\fR
+Arbitray string on the node.
 .TP
 \fBFeatures\fR
 Features available on the nodes. Also see \fBfeatures_act\fR.
