@@ -1348,6 +1348,7 @@ extern void slurm_free_update_node_msg(update_node_msg_t * msg)
 {
 	if (msg) {
 		xfree(msg->comment);
+		xfree(msg->extra);
 		xfree(msg->features);
 		xfree(msg->features_act);
 		xfree(msg->gres);
