@@ -908,6 +908,7 @@ _pack_update_node_msg(update_node_msg_t * msg, buf_t *buffer,
 	if (protocol_version >= SLURM_21_08_PROTOCOL_VERSION) {
 		packstr(msg->comment, buffer);
 		pack32(msg->cpu_bind, buffer);
+		packstr(msg->extra, buffer);
 		packstr(msg->features, buffer);
 		packstr(msg->features_act, buffer);
 		packstr(msg->gres, buffer);
@@ -960,6 +961,7 @@ _unpack_update_node_msg(update_node_msg_t ** msg, buf_t *buffer,
 	if (protocol_version >= SLURM_21_08_PROTOCOL_VERSION) {
 		safe_unpackstr(&tmp_ptr->comment, buffer);
 		safe_unpack32(&tmp_ptr->cpu_bind, buffer);
+		safe_unpackstr(&tmp_ptr->extra, buffer);
 		safe_unpackstr(&tmp_ptr->features, buffer);
 		safe_unpackstr(&tmp_ptr->features_act, buffer);
 		safe_unpackstr(&tmp_ptr->gres, buffer);
@@ -1785,6 +1787,7 @@ _unpack_node_info_members(node_info_t * node, buf_t *buffer,
 		safe_unpackstr_xmalloc(&node->gres_used, &uint32_tmp, buffer);
 		safe_unpackstr_xmalloc(&node->os, &uint32_tmp, buffer);
 		safe_unpackstr_xmalloc(&node->comment, &uint32_tmp, buffer);
+		safe_unpackstr_xmalloc(&node->extra, &uint32_tmp, buffer);
 		safe_unpackstr_xmalloc(&node->reason, &uint32_tmp, buffer);
 		if (acct_gather_energy_unpack(&node->energy, buffer,
 					      protocol_version, 1)
