@@ -154,6 +154,7 @@ static int _dump_node(data_t *p, node_info_t *node)
 	/* core_spec_cnt intentionally omitted */
 	data_set_int(data_key_set(d, "cpu_binding"), node->cpu_bind);
 	data_set_int(data_key_set(d, "cpu_load"), node->cpu_load);
+	data_set_string(data_key_set(d, "extra"), node->extra);
 	data_set_int(data_key_set(d, "free_memory"), node->free_mem);
 	data_set_int(data_key_set(d, "cpus"), node->cpus);
 	data_set_int(data_key_set(d, "last_busy"), node->last_busy);
