@@ -808,6 +808,11 @@ static bool _match_node_data(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr)
 		return false;
 
 	if (sinfo_ptr->nodes &&
+	    params.match_flags.extra_flag &&
+	    (xstrcmp(node_ptr->extra, sinfo_ptr->extra)))
+		return false;
+
+	if (sinfo_ptr->nodes &&
 	    params.match_flags.features_flag &&
 	    (xstrcmp(node_ptr->features, sinfo_ptr->features)))
 		return false;
@@ -1009,6 +1014,7 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr)
 		sinfo_ptr->gres       = node_ptr->gres;
 		sinfo_ptr->gres_used  = node_ptr->gres_used;
 		sinfo_ptr->comment    = node_ptr->comment;
+		sinfo_ptr->extra      = node_ptr->extra;
 		sinfo_ptr->reason     = node_ptr->reason;
 		sinfo_ptr->reason_time= node_ptr->reason_time;
 		sinfo_ptr->reason_uid = node_ptr->reason_uid;
