@@ -65,6 +65,7 @@ HIGHLIGHTS
     'username' field in addition to the 'sun' (Slurm UserName) field.
  -- service files - change dependency to network-online rather than just
     network to ensure DNS and other services are available.
+ -- Add "Extra" field to node to store extra information other than a comment.
 
 CONFIGURATION FILE CHANGES (see man appropriate man page for details)
 =====================================================================
