@@ -123,6 +123,7 @@ documents those changes that are of interest to users and administrators.
  -- plugins/cli_filter - Convert to using data_t to serialize JSON.
  -- Fix testing array job after regaining locks in backfill.
  -- Don't display node's comment with "scontrol show nodes" unless set.
+ -- Add "Extra" field to node to store extra information other than a comment.
 
 * Changes in Slurm 20.11.9
 ==========================
